--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ jobs:
           fc-cache -fv
 
       - run: mkdir -p out
-      - run: typst compile main.typ out/main.pdf
+      - run: typst compile main.typ out/Calculus_on_Manifolds.pdf
       - uses: peaceiris/actions-gh-pages@v3
-        # if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
